Expand Quick Start with detailed installation steps